# square-root-calculator

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.ru.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.ru.md  Makefile  README.md  README.ru.md  main.py  pyproject.toml  pytest.ini  run_tests.bat  run_tests.py  run_tests.sh  square_root_calculator.spec  test_quick.bat  test_quick.sh
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.ru.md  TESTING.md  TESTING.ru.md  USAGE_EXAMPLES.md  USAGE_EXAMPLES.ru.md
docs/screenshots/: index.html
src/square_root_calculator/: __init__.py
src/square_root_calculator/core/: __init__.py  calculator.py  constants.py  history.py  settings.py  update_checker.py
src/square_root_calculator/locales/: __init__.py  en.json  ru.json  translator.py
src/square_root_calculator/ui/: calculation_handler.py  components.py  history_display.py  input_validator.py  main_window.py  menu_builder.py  result_formatter.py  ui_builder.py  update_thread.py  widget_helpers.py
tests/: conftest.py  test_calculator.py  test_gui.py  test_history.py  test_settings.py  test_translator.py
translations/: README.md  de.json  de.json.example
