[project]
name = "square-root-calculator"
version = "0.2.0"
description = "A comprehensive square root calculator with support for real numbers, complex numbers, and arbitrary precision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.10.0",
    "qt-material>=2.14",
]
authors = [
    {name = "Square Root Calculator Team"}
]
keywords = ["calculator", "square-root", "math", "complex-numbers", "precision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
square-root-calculator = "square_root_calculator.ui.main_window:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=6.0.0",
]

[tool.uv.sources]
